# Memory-Anki

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENT.md  AGENTS.md  AI_PROJECT_CONTEXT.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_DOCUMENTATION.md  PWA.md  README.md  configure-tailscale-pwa.bat  install-pwa-autostart.bat  memory-anki.env.bat  render.yaml  requirements.txt  run-dev.bat  run-stable.bat  set-stable-current.bat  start-desktop.bat  start-floating-timer.bat  start-pwa-hidden.ps1  start-pwa.bat  start.bat  stop-pwa.bat  stop.bat  supabase-vercel-render说明.md  tmp-preview-palace16.json  uninstall-pwa-autostart.bat  update.bat  vercel.json  代码优化提示词.md
apps/api/: _DEBUG_FALLBACK.json  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  runtime-contract.json  storage-layout.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_legacy_schema_adjustments.py  0003_reset_english_reading_dictionary_cache.py  0004_chapter_quiz_question_ownership.py  0005_relax_palace_quiz_question_palace_owner.py  0006_study_startup_indexes.py  0007_study_sessions.py  0008_prune_deleted_features.py  0009_restore_review_schedule_algorithm_used.py  0010_palace_quiz_ocr_sources.py  0011_database_performance_indexes.py  0012_freestyle_history.py  0013_prune_legacy_config_keys.py  0014_palace_templates.py  0015_review_log_notes.py  0016_review_schedule_anchor_repair.py  0017_soft_delete_palaces_and_quiz_questions.py  0018_english_reading_vocabulary_notes.py  0019_mindmap_recall_and_view_preferences.py  0020_ai_quality_engineering.py  0021_remove_mindmap_view_preferences.py  0022_preserve_retired_mindmap_preferences.py  0023_quiz_generation_workspace.py  0024_quiz_learning_loop.py  0025_batch_generation_workspace.py  0026_ai_learning_runs.py  0027_mindmap_recall_evidence.py  0028_remove_focus_practice.py  0029_unify_learning_groups.py  0030_pdf_document_library.py  0031_backfill_zero_duration_sessions.py  0032_review_stage_adjustments.py  0033_ai_prompt_composition.py  0034_palace_subject_ownership.py  0035_node_fsrs_scheduler.py  0036_fsrs_rating_check_constraint.py  0037_realign_legacy_fsrs_due_dates.py  0038_quiz_question_node_bindings.py  0039_unify_fsrs_drop_legacy_schedules.py  0040_english_topic_patterns.py  (+4 more)
apps/api/src/memory_anki/: __init__.py
apps/api/src/memory_anki/app/: error_handlers.py  main.py  runtime_prepare.py  startup_runtime.py  startup_warmup.py
apps/api/src/memory_anki/core/: __init__.py  api_token_auth.py  concurrency_limits.py  config.py  dotenv_compat.py  file_sync.py  file_sync_lock.py  files.py  local_config.py  logging.py  migration.py  prompt_text.py  request_context.py  request_logging.py  runtime.py  runtime_activity.py  runtime_paths.py  storage_layout.py  time.py
apps/api/src/memory_anki/platform/: __init__.py
apps/api/src/memory_anki/shared_kernel/: __init__.py  events.py  operations.py  use_cases.py
apps/api/src/memory_anki/supervisor/: __init__.py  runtime_supervisor.py  runtime_supervisor_lifecycle.py  runtime_supervisor_proxy.py  runtime_supervisor_support.py
apps/api/src/memory_anki_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/api/tests/: conftest.py  support.py  test_ai_gateway.py  test_ai_learning_runs.py  test_api_token_auth.py  test_architecture_v3_contracts.py  test_backfill_zero_duration_sessions_migration.py  test_backup_lifecycle.py  test_batch_generation_workspace.py  test_cloud_config.py  test_concurrency_limits.py  test_dashboard_routes.py  test_database_performance_optimizations.py  test_dev_server_migration_preflight.py  test_editor_state_service.py  test_english_pattern_routes.py  test_english_reading_gap_loop.py  test_english_reading_routes.py  test_english_routes.py  test_error_handlers.py  test_external_ai_call_logs.py  test_fable_pagination_response_models.py  test_file_sync.py  test_formal_fsrs_review.py  test_freestyle_branch_units.py  test_freestyle_queue_api.py  test_freestyle_routes.py  test_full_transfer_service.py  test_idempotency.py  test_idempotency_purge.py  test_idempotent_writes.py  test_import_routes.py  test_knowledge_routes.py  test_legacy_fsrs_migration.py  test_local_config.py  test_manual_text_quiz_parser.py  test_metrics_endpoint.py  test_mindmap_ai_split_service.py  test_mindmap_document.py  test_mindmap_import_job_service.py  (+51 more)
(+2936 files in other folders)
